<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@drawable/login_background"
    tools:context=".MainActivity">



    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="10dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="10dp"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <ImageView
                android:id="@+id/ivlogo"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_margin="10dp"
                android:src="@drawable/logo" />
        </RelativeLayout>

        <LinearLayout
            android:layout_marginTop="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">


            <EditText
                android:id="@+id/idlogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edit_text"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:textAlignment="center"
                android:hint="@string/enter_name"
                />

            <EditText
                android:id="@+id/idpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edit_text"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:textAlignment="center"
                android:inputType="numberPassword"
                android:hint="@string/enter_password" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <Button
                    android:id="@+id/btnlogin"
                    android:layout_width="match_parent"
                    android:layout_height="37sp"
                    android:layout_marginTop="10sp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:background="@drawable/bg_login"
                    style="@style/button"
                    android:text="@string/button" />

                <TextView
                    android:id="@+id/tvinfo"
                    android:layout_below="@+id/btnlogin"
                    android:layout_width="match_parent"
                    android:text="@string/text_view"
                    android:textSize="20sp"
                    android:padding="3sp"
                    android:textAlignment="center"
                    android:textColor="@color/coltv"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/btnsignup"
                    android:layout_width="match_parent"
                    android:layout_height="37sp"
                    android:layout_marginTop="10sp"
                    android:background="@drawable/bg_login"
                    android:layout_below="@+id/tvinfo"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    style="@style/button"
                    android:text="@string/signup" />
            </RelativeLayout>



        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>